[package]
edition = "2021"
name = "farm_plugin_remove_console"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { version = "*" }
farmfe_toolkit_plugin_types = { version = "*" }
farmfe_toolkit={version = "*"}
farmfe_macro_plugin = { version = "*" }
regex="1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
